knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/npe4__Relationship_Settings__c/fields/npe4__Allow_AutoCreated_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>npe4__Allow_AutoCreated_Duplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-created Relationships are automatically deduplicated to prevent duplicate Relationship records from being created between two Contacts.  Check this box to disable that behavior and allow multiple Relationships of the same Type to be created between Contacts</description>
    <inlineHelpText>Auto-created Relationships are auto-deduplicated to prevent duplicate Relationship records from being created between two Contacts.  Check this box to disable this behavior &amp; allow multiple Relationships of the same Type to be created between two Contacts</inlineHelpText>
    <label>Allow Auto-Created Duplicates</label>
    <type>Checkbox</type>
</CustomField>