knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/npe4__Relationship_Settings__c/fields/npe4__DISABLE_RelationshipCM_trigger__c.field-meta.xml
<CustomField>
    <fullName>npe4__DISABLE_RelationshipCM_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DISABLES the RelationshipCampaignMembers.trigger (CampaignMember, after insert, after update) 
- checking this box will disable a trigger. This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</description>
    <inlineHelpText>DISABLES the RelationshipCampaignMembers.trigger (CampaignMember, after insert, after update) 
- checking this box will disable a trigger. This can cause erratic and unpredictable behavior in your NPSP. FOR ADVANCED CONSULTANTS AND DEVELOPERS ONLY.</inlineHelpText>
    <label>DISABLE_RelationshipCM_trigger</label>
    <type>Checkbox</type>
</CustomField>